feat udistrital/arka_cliente#889: Paso a producción
- Servicio que retorna el nombre del tercero y uno de los documentos de identificación que tiene registrados (si existen).
- Se debe indicar el tercero_id.
